--- a/study/todolist.html
+++ b/study/todolist.html
@@ -15,14 +15,13 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="container">
         <header>
             <h1>To do list</h1>
         </header>
-        <input>
-        <input type="text" class="input" placeholder="오늘의 할일은 무엇일까요?">
-        <button class="button">입력</button>
-        <div class="newList">
+        <input type="text" id="input" placeholder="오늘의 할일은 무엇일까요?">
+        <button id="button">입력</button>
+        <div id="newList">
         </div>
         </section>
         <!-- JavaScript -->
