--- a/Memopad/index.html
+++ b/Memopad/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나만의 메모장</title>
-    <style></style>
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -23,27 +22,21 @@
     </main>
 
     <!-- JavaScript -->
-    <script src="./memo_test.js"></script>
+    <script src="./memo.js"></script>
 </body>
 
 </html>
 
-<!-- 하고 싶은 거 -->
-font-face 왜 안되노..? /
-순서 대신 년원일로 바꾸기
-/ year + '-' + month + '-' + date
-/toLocaleDateString()
-
-저장하면 초기화 시키기
-/ =''; 하기
-
-저장된 것 수정할 수 있게 하기
-/로컬스토리지에서 다시 가져와서... 어쩌고...
+<!-- "css 하고 싶은 거"
+font-face 설정
+내용이 많아지면 왼쪽으로 붙는거 안되게 하기! 원래대로 가운데 있을 수 있게! -->
+flex 간격 조절,,?
 
 
-아무것도 안 적고 Save 하면 알림창 띄우기
-/ if (!title || !content) {
-alert('제목과 내용을 모두 입력해주세요.');
-return;
-}
-<!-- 내용이 많아지면 왼쪽으로 붙는거 안되게 하기! 원래대로 가운데 있을 수 있게!  -->
+<!--"JS 하고 싶은 거"
+순서 대신 년원일로 바꾸기 / toLocaleDateString() 
+아무것도 안 적고 Save 하면 알림창 띄우기 / if alert
+저장하면 초기화 시키기 / ='';
+-->
+
+수정버튼 하고 싶은데 할 수 있을랑가,,
