--- a/Memopad/index.html
+++ b/Memopad/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나만의 메모장</title>
+    <title>mememomo</title>
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body onload="alert('안녕하세요🙇🏻‍♀️ \n멋쟁이사자처럼 FES 5기 김지우입니다. \n애매모호한 것들을 메모를 하는 📝mememomo를 만들어 보았습니다.')">
     <main>
         <h1>mememomo</h1>
         <section>
@@ -30,8 +30,6 @@
 <!-- "css 하고 싶은 거"
 font-face 설정
 내용이 많아지면 왼쪽으로 붙는거 안되게 하기! 원래대로 가운데 있을 수 있게! -->
-flex 간격 조절,,?
-
 
 <!--"JS 하고 싶은 거"
 순서 대신 년원일로 바꾸기 / toLocaleDateString() 
